fix parallel tests